@@ -7,14 +7,17 @@ import java.io.IOException;
 import java.io.InputStreamReader;
 import java.math.BigDecimal;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.util.stream.Collectors;
 
 public class WebApiExRateProvider implements ExRateProvider{
     @Override
     public BigDecimal getExRate(String currency) throws IOException {
-            URL url = new URL("https://open.er-api.com/v6/latest/" + currency);
-            HttpURLConnection connection =(HttpURLConnection) url.openConnection();
+            //URL url = new URL("https://open.er-api.com/v6/latest/" + currency);
+            URI uri = new URI("https://open.er-api.com/v6/latest/" + currency);
+
+            HttpURLConnection connection =(HttpURLConnection) uri.toURL().openConnection();
             BufferedReader br = new BufferedReader(new InputStreamReader(connection.getInputStream()));
             String response = br.lines().collect(Collectors.joining());
             br.close();
